[package]
name = "esp-xray"
version = "0.1.0"
edition = "2021"

[dependencies]
rtos-trace = "0.1.3"
rtt-target = "0.5.0"
critical-section = "1.1.2"
esp-hal = { version = "0.16.0" }
log = "0.4.20"

[features]
esp32c2 = [ "esp-hal/esp32c2" ]
esp32c3 = [ "esp-hal/esp32c3" ]
esp32c6 = [ "esp-hal/esp32c6" ]
esp32h2 = [ "esp-hal/esp32h2" ]
esp32s2 = [ "esp-hal/esp32s2" ]
esp32s3 = [ "esp-hal/esp32s3" ]
