[package]
name = "esp-xray"
version = "0.1.0"
edition = "2021"

[dependencies]
rtos-trace = "0.1.3"
rtt-target = "0.5.0"
critical-section = "1.1.3"
esp-hal = { version = "0.20.1" }

[features]
esp32c2 = [ "esp-hal/esp32c2" ]
esp32c3 = [ "esp-hal/esp32c3" ]
esp32c6 = [ "esp-hal/esp32c6" ]
esp32h2 = [ "esp-hal/esp32h2" ]
esp32s2 = [ "esp-hal/esp32s2" ]
esp32s3 = [ "esp-hal/esp32s3" ]
