[package]
name = "esp-xray-example"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.16.0", features = [
    "embassy",
    "embassy-executor-thread",
    "embassy-integrated-timers",
    "embassy-time-timg0",
] }
esp-backtrace = { version = "0.11.1", features = [
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", default-features = false, features = [
    "uart",
    "log",
] }

embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.0" }
esp-xray = { path = "../esp-xray" }

[features]
default = ["embassy-executor/rtos-trace"]

esp32s2 = [
    "esp-hal/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-xray/esp32s2",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-xray/esp32s3",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-xray/esp32c2",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-xray/esp32c3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-xray/esp32c6",
]
esp32h2 = [
    "esp-hal/esp32h2",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
    "esp-xray/esp32h2",
]

# Currently needed since in embassy-executor 0.5.0 support for rtos-trace was broken
[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "7bf4710f3fd89879eca6ca24ffdbd75c859971be", package = "embassy-executor" }
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy", rev = "7bf4710f3fd89879eca6ca24ffdbd75c859971be", package = "embassy-executor-macros" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "7bf4710f3fd89879eca6ca24ffdbd75c859971be", package = "embassy-time" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "7bf4710f3fd89879eca6ca24ffdbd75c859971be", package = "embassy-time-driver" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy", rev = "7bf4710f3fd89879eca6ca24ffdbd75c859971be", package = "embassy-time-queue-driver" }
