[package]
name = "esp-xray-example"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.20.1", features = ["async"] }
esp-hal-embassy = { version = "0.3.0" }
esp-backtrace = { version = "0.14.1", features = [
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.11.0", features = ["log"] }

embassy-executor = { version = "0.6.0", features = ["nightly", "rtos-trace", "integrated-timers"] }

embassy-time = { version = "0.3.2" }

esp-xray = { path = "../esp-xray" }

[features]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-hal-embassy/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-xray/esp32s2",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-xray/esp32s3",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-hal-embassy/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-xray/esp32c2",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-xray/esp32c3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-xray/esp32c6",
]
esp32h2 = [
    "esp-hal/esp32h2",
    "esp-hal-embassy/esp32h2",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
    "esp-xray/esp32h2",
]
